--- a/main.html
+++ b/main.html
@@ -24,10 +24,10 @@
     <button id="button-4" class="btn btn-danger btn-sm">Button-4</button>
 
     <!-- Button 5: Warning Large Full-Width -->
-    <button id="button-5" class="btn btn-warning btn-lg w-100 mt-2">Button-5</button>
+    <button id="button-5" class="btn btn-warning btn-lg vw-100 mt-2">Button-5</button>
 
     <!-- Button 6: Disabled Info -->
-    <button id="button-6" class="btn btn-info" disabled>Button-6</button>
+    <button id="button-6" class="btn btn-info" disabled class="disabled">Button-6</button>
 
     <!-- Button 7: Light -->
     <button id="button-7" class="btn btn-light">Button-7</button>
